Add @SuppressWarnings annotations and refactor imports for consistency